objects/ssot__BillingSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BillDayOfMonth__c</fullName>
        <label>Bill Day Of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToAccountId__c</fullName>
        <label>Bill To Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BilledAmount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BilledThroughPeriodDate__c</fullName>
        <label>BilledThroughPeriod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingMethod__c</fullName>
        <label>Billing Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingMilestonePlanId__c</fullName>
        <label>Billing Milestone Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingPeriodAmount__c</fullName>
        <label>Billing Period Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleBillingType__c</fullName>
        <label>Billing Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleCategory__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleEndDate__c</fullName>
        <label>Billing Schedule end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleGroupId__c</fullName>
        <label>Billing Schedule Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleStartDate__c</fullName>
        <label>Billing Schedule start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleStatus__c</fullName>
        <label>Billing Schedule Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleType__c</fullName>
        <label>Billing Schedule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTermNumber__c</fullName>
        <label>Billing Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTermUnit__c</fullName>
        <label>Billing Term Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTreatmentItemId__c</fullName>
        <label>Billing Treatment Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyIsoCode__c</fullName>
        <label>Currency Iso Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustomInvoiceGroupKey__c</fullName>
        <label>Custom Invoice Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalReferenceItemText__c</fullName>
        <label>External Reference Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalReferenceText__c</fullName>
        <label>External Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupingKeyText__c</fullName>
        <label>Grouping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Billing Schedule Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceGroupTypeText__c</fullName>
        <label>Invoice Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LineAmount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextBillingDate__c</fullName>
        <label>Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__NextChargeFromDate__c</fullName>
        <label>Next Charge From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalBillingScheduleId__c</fullName>
        <label>Original Billing Schedule</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PendingAmount__c</fullName>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceItemObjectId__c</fullName>
        <label>Reference Item Object Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceItemObject__c</fullName>
        <label>Reference Item Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObjectId__c</fullName>
        <label>Reference Object Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceObject__c</fullName>
        <label>Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxTreatmentId__c</fullName>
        <label>Tax Treatment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceNumber__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>